--- a/public/styles/gilbertevents.css
+++ b/public/styles/gilbertevents.css
@@ -273,7 +273,7 @@ header {
 }
 
 #top_nav {
-  color: #EBE5D2;
+  color: #ebe5d2;
   text-align: right !important;
   line-height: 30px;
   padding: 12px 0px 0px 0px;
@@ -296,3 +296,71 @@ header {
   color: #242938;
   font-family: 'Mulish';
 }
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+.btn-primary {
+  --bs-btn-bg: #005ba7 !important;
+  --bs-btn-border-color: #005ba7 !important;
+  --bs-btn-hover-bg: #014379 !important;
+  --bs-btn-hover-border-color: #014379 !important;
+  --bs-btn-disabled-bg: #005ba7 !important;
+  --bs-btn-disabled-border-color: #005ba7 !important;
+}
+
+a.btn-primary {
+  color: #fff !important;
+  --bs-btn-color: #fff !important;
+}
+
+.btn-gilbert {
+  --bs-btn-color: #fff !important;
+  --bs-btn-bg: #f19830 !important;
+  --bs-btn-border-color: #f19830 !important;
+  --bs-btn-hover-color: #fff !important;
+  --bs-btn-hover-bg: #ee8c1b !important;
+  --bs-btn-hover-border-color: #ee8c1b !important;
+  --bs-btn-focus-shadow-rgb: 217, 164, 6;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #ffcd39;
+  --bs-btn-active-border-color: #ffc720;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #f19830 !important;
+  --bs-btn-disabled-border-color: #f19830 !important;
+}
+
+.bg-interview {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-image: url('/images/office-bg-wide.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: var(--bs-border-radius);
+}
+
+.bg-interview-full {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  background-image: url('/images/office-bg-wide.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: var(--bs-border-radius);
+}
+
+.bg-gradient-primary-to-secondary {
+  background-color: #0061f2 !important;
+  background-image: linear-gradient(135deg, #0061f2 0%, rgba(105, 0, 199, 0.8) 100%) !important;
+}
+
