--- a/public/styles/gilbertevents.css
+++ b/public/styles/gilbertevents.css
@@ -285,7 +285,7 @@ header {
   min-height: 50px;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
   .search_block {
     display: none;
   }
@@ -351,7 +351,7 @@ a.btn-primary {
 .bg-interview-full {
   display: flex;
   width: 100%;
-  height: 80px;
+  height: 60px;
   background-image: url('/images/office-bg-wide.jpg');
   background-size: cover;
   background-position: center;
@@ -363,4 +363,11 @@ a.btn-primary {
   background-color: #0061f2 !important;
   background-image: linear-gradient(135deg, #0061f2 0%, rgba(105, 0, 199, 0.8) 100%) !important;
 }
+
+@media screen and (max-width: 768px) {
+  .card-details {
+    width: 100% !important;
+  }
+}
+
 
